# checkplz

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md
checknit/: Cargo.toml  build.rs  checknit  compile.sh
checknit/.cargo/: config.toml
checknit/src/: init.rs  integrity.rs  main.rs  ui.rs
checknit/src/ui/: checkrain.rs  menu.rs  odysseyrain.rs  power.rs  shell.rs
config/: busybox.config  linux.config  localoptions.h  rust.toml
config/odysseyra1n/: odyssey-device-deploy.sh
licenses/: LGPLv2.1.txt
patches/: busybox-use-musl-clang.patch  libusbmuxd-no-ipv6.patch  usbmuxd-dont-conflict-with-libplist.patch
scripts/: ld.musl-clang  musl-clang
